More revision notes added

--- a/UsingJavascriptSerializer/UsingJavascriptSerializer.csproj
+++ b/UsingJavascriptSerializer/UsingJavascriptSerializer.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{676D8231-94DB-4B06-B1F4-804BD9879B92}</ProjectGuid>
+    <ProjectGuid>{DA7B6A98-F084-4FD9-BC95-301EDB3BF0E3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Question15_1</RootNamespace>
-    <AssemblyName>Question15-1</AssemblyName>
+    <RootNamespace>UsingJavascriptSerializer</RootNamespace>
+    <AssemblyName>UsingJavascriptSerializer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,8 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.JScript" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
